// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pool accounts funds goes to zero > PolkadotXcm assethub 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Pool accounts funds goes to zero > assetHubs events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Pool accounts funds goes to zero > sender events foreignAssets 1`] = `
[
  {
    "data": {
      "amount": 100000000000000000,
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": "(rounded 11000000)",
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "5Go9qhpqq2EzAZ1SKkkx6bTjnSoTnHEB8FHCnieNS57TimEF",
      "to": "5Eg2fnshxV9kofpcNEFE7azHLAjcCtpNkbsH3kkWZasYUVKs",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;

exports[`Send eKILT while switch Pair does not exist > PolkadotXcm assethub 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Send eKILT while switch Pair does not exist > assetHubs events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Send eKILT while switch Pair does not exist > receiver events switch pallet 1`] = `[]`;

exports[`Send eKILT while switch Pair does not exist > receiver events xcm queue pallet 1`] = `
[
  {
    "data": {
      "error": "UntrustedReserveLocation",
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 200000000,
      },
    },
    "method": "Fail",
    "section": "xcmpQueue",
  },
]
`;

exports[`Send eKILT while switch Pair does not exist > sender events foreignAssets 1`] = `
[
  {
    "data": {
      "amount": 100000000000000000,
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": "(rounded 11000000)",
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "5Go9qhpqq2EzAZ1SKkkx6bTjnSoTnHEB8FHCnieNS57TimEF",
      "to": "5Eg2fnshxV9kofpcNEFE7azHLAjcCtpNkbsH3kkWZasYUVKs",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > Switch events assetSwitchPool1 pallet 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V3": {
          "interior": {
            "X1": {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > receiver events polkadotXcm 1`] = `[]`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > receiver events xcm queue pallet 1`] = `[]`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > sender events Balances 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
    },
    "method": "Transfer",
    "section": "balances",
  },
]
`;

exports[`Switch KILTs against EKILTs no enough DOTs on AH > sender events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
